# matrix-ui-serializable

./: Cargo.toml  README.md
src/: commands.rs  lib.rs  notifications.rs  requests.rs  singletons.rs  utils.rs
src/account/: backup.rs
src/events/: emoji_verification.rs  event_preview.rs  events.rs  handlers.rs  mod.rs  timeline.rs
src/init/: login.rs  mod.rs  oauth.rs  session.rs  singletons.rs  sync.rs  workers.rs
src/models/: async_requests.rs  device.rs  event_bridge.rs  events.rs  misc.rs  mod.rs  profile.rs  requests.rs  room_display_name.rs  state_updater.rs
src/room/: invited_room.rs  joined_room.rs  mod.rs  notifications.rs  room_filter.rs  room_screen.rs  rooms_list.rs  tags.rs
src/room/frontend_events/: events_dto.rs  mod.rs  msg_like.rs  state_event.rs  thread_summary.rs  timeline_item_id.rs  virtual_event.rs
src/room/message/: message_details.rs
src/seshat/: commands.rs  utils.rs
src/stores/: login_store.rs  mod.rs  room_store.rs
src/user/: mod.rs  user_power_level.rs  user_profile.rs
