[package]
name = "matrix-ui-serializable"
version = "0.2.0"
authors = ["IT-ess"]
description = "Opinionated abstraction of the matrix-sdk crate with serializable structs"
edition = "2024"
repository = "https://github.com/IT-ess/matrix-ui-serializable"
readme = "README.md"
keywords = ["matrix", "matrix-rust-sdk", "communication"]
license = "Apache-2.0"

[dependencies]
async-trait = "0.1.89"
serde = "1.0"
serde_json = "1"
thiserror = "2"
anyhow = "1.0.100"
matrix-sdk = { git = "https://github.com/matrix-org/matrix-rust-sdk", rev = "e69f9e4f896b27aee4ba6c241f1a680625f0580c", default-features = false, features = [
    "anyhow",
    "bundled-sqlite",
    "rustls-tls",
    "e2e-encryption",
    "automatic-room-key-forwarding",
] }
matrix-sdk-ui = { git = "https://github.com/matrix-org/matrix-rust-sdk", rev = "e69f9e4f896b27aee4ba6c241f1a680625f0580c", default-features = false, features = [
    "rustls-tls",
] }
futures = "0.3.31"
futures-util = "0.3.31"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
eyeball = "0.8.8"
crossbeam-channel = "0.5.15"
crossbeam-queue = "0.3.12"
bitflags = "2.10.0"
htmlize = "1.0.6"
linkify = "0.10.0"
unicode-segmentation = "1.12.0"
rand = "0.9.2"
url = "2.5.7"
mime = "0.3.17"
tracing = "0.1.43"
