[package]
name = "matrix-ui-serializable"
version = "0.4.0"
authors = ["IT-ess"]
description = "Opinionated abstraction of the matrix-sdk crate with serializable structs"
edition = "2024"
repository = "https://github.com/IT-ess/matrix-ui-serializable"
readme = "README.md"
keywords = ["matrix", "matrix-rust-sdk", "communication"]
license = "Apache-2.0"

[dependencies]
async-trait = "0.1.89"
serde = "1.0"
serde_json = "1"
thiserror = "2"
anyhow = "1.0.102"
matrix-sdk = { version = "0.17.0", default-features = false, features = [
    "anyhow",
    "bundled-sqlite",
    "e2e-encryption",
    "automatic-room-key-forwarding",
] }
matrix-sdk-ui = { version = "0.17.0", default-features = false }
futures = "0.3.31"
futures-util = "0.3.31"
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread"] }
eyeball = "0.8.8"
crossbeam-channel = "0.5.15"
crossbeam-queue = "0.3.12"
bitflags = "2.10.0"
htmlize = "1.0.6"
indexmap = "2.14.0"
linkify = "0.10.0"
unicode-segmentation = "1.12.0"
rand = "0.10"
url = "2.5.7"
mime = "0.3.17"
tracing = "0.1.43"
reqwest = { version = "0.13.3", default-features = false, features = ["default-tls"] }
